attached_assets/Pasted--error-E0282-type-annotations-needed-for-Box-root-cargo_1778543591701.txt

error[E0282]: type annotations needed for `Box<_>`
  --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:83:9
   |
83 |     let items = format_items
   |         ^^^^^
...
86 |     Ok(items.into())
   |        ----- type must be known at this point
   |
help: consider giving `items` an explicit type, where the placeholders `_` are specified
   |
83 |     let items: Box<_> = format_items
   |              ++++++++

   Compiling zvariant_utils v1.0.1
   Compiling darling_core v0.14.4
   Compiling chrono-tz-build v0.2.0
   Compiling tracing-core v0.1.31
   Compiling instant v0.1.12
   Compiling clap_lex v0.7.0
   Compiling event-listener v2.5.3
   Compiling cached_proc_macro_types v0.1.1
   Compiling base64 v0.21.7
   Compiling cpufeatures v0.2.9
   Compiling urlencoding v2.1.3
   Compiling sha1 v0.10.5
   Compiling xdg-home v1.0.0
For more information about this error, try `rustc --explain E0282`.
   Compiling async-broadcast v0.5.1
error: could not compile `time` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
[customize_airootfs] FATAL: eww v0.6.0 build failed.
[customize_airootfs] waybar has been removed; the ISO would ship without any bar.
[customize_airootfs] Override NYXUS_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!+?⇣  2m54s
❯ tail -80 bake.log                                                                      19:51:35
   Compiling itoa v1.0.9
   Compiling serde_json v1.0.105
   Compiling proc-macro-hack v0.5.20+deprecated
   Compiling rustversion v1.0.14
   Compiling mio v0.8.10
   Compiling gtk v0.17.1
   Compiling libm v0.2.8
   Compiling ryu v1.0.15
   Compiling ref-cast v1.0.22
   Compiling strsim v0.11.0
   Compiling utf8parse v0.2.1
   Compiling powerfmt v0.2.0
   Compiling anstyle-parse v0.2.1
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.6
   Compiling deranged v0.3.11
   Compiling phf_generator v0.10.0
   Compiling num_cpus v1.16.0
   Compiling time v0.1.45
   Compiling socket2 v0.5.6
   Compiling signal-hook-registry v1.4.1
   Compiling hifijson v0.2.0
   Compiling byteorder v1.4.3
   Compiling convert_case v0.4.0
   Compiling colorchoice v1.0.0
   Compiling iana-time-zone v0.1.57
   Compiling termcolor v1.2.0
   Compiling time-core v0.1.2
   Compiling num-conv v0.1.0
   Compiling anstyle-query v1.0.0
   Compiling async-trait v0.1.73
   Compiling bytes v1.4.0
   Compiling dyn-clone v1.0.12
   Compiling anstyle v1.0.1
   Compiling rayon-core v1.12.1
   Compiling time v0.3.34
   Compiling regex v1.10.3
   Compiling anstream v0.6.12
   Compiling chrono v0.4.26
   Compiling crossbeam-deque v0.8.3
   Compiling nix v0.26.2
   Compiling hashbrown v0.11.2
   Compiling lalrpop-util v0.20.0
   Compiling parse-zoneinfo v0.3.0
   Compiling lalrpop v0.20.0
   Compiling digest v0.10.7
error[E0282]: type annotations needed for `Box<_>`
  --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:83:9
   |
83 |     let items = format_items
   |         ^^^^^
...
86 |     Ok(items.into())
   |        ----- type must be known at this point
   |
help: consider giving `items` an explicit type, where the placeholders `_` are specified
   |
83 |     let items: Box<_> = format_items
   |              ++++++++

   Compiling zvariant_utils v1.0.1
   Compiling darling_core v0.14.4
   Compiling chrono-tz-build v0.2.0
   Compiling tracing-core v0.1.31
   Compiling instant v0.1.12
   Compiling clap_lex v0.7.0
   Compiling event-listener v2.5.3
   Compiling cached_proc_macro_types v0.1.1
   Compiling base64 v0.21.7
   Compiling cpufeatures v0.2.9
   Compiling urlencoding v2.1.3
   Compiling sha1 v0.10.5
   Compiling xdg-home v1.0.0
For more information about this error, try `rustc --explain E0282`.
   Compiling async-broadcast v0.5.1
error: could not compile `time` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
[customize_airootfs] FATAL: eww v0.6.0 build failed.
[customize_airootfs] waybar has been removed; the ISO would ship without any bar.
[customize_airootfs] Override NYXUS_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!+?⇣
❯                                                             